unpackaged/main/default/objects/Contact/fields/ACG_AAA_Membership__c.field-meta.xml
<CustomField>
    <fullName>ACG_AAA_Membership__c</fullName>
    <formula>Account.ACG_AAA_Membership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAA Membership #</label>
    <type>Text</type>
</CustomField>