unpackaged/main/default/objects/Contact/fields/ACG_LoyaltyID__c.field-meta.xml
<CustomField>
    <fullName>ACG_LoyaltyID__c</fullName>
    <description>This field represents unique id from Clutch</description>
    <externalId>true</externalId>
    <label>LoyaltyID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>