unpackaged/main/default/objects/Contact/fields/ACG_WashID__c.field-meta.xml
<CustomField>
    <fullName>ACG_WashID__c</fullName>
    <description>This field represent unique id for the member from ICS.</description>
    <externalId>true</externalId>
    <label>WashID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>