unpackaged/main/default/objects/Contact/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGENT</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>CUSTOMER</fullName>
            </value>
            <value>
                <fullName>TOWDEST</fullName>
            </value>
            <value>
                <fullName>DRIVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>