unpackaged/main/default/objects/Contact/fields/Dispatch_Context__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatch Context</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceAppointment.isBreakdown__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Contacts (Dispatch Context)</relationshipLabel>
    <relationshipName>DispContacts</relationshipName>
    <type>Lookup</type>
</CustomField>