unpackaged/main/default/objects/Contact/fields/Display_Details__c.field-meta.xml
<CustomField>
    <fullName>Display_Details__c</fullName>
    <formula>FirstName + &#39; &#39; + LastName + &#39; / &#39; + Phone + &#39; / &#39; + Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Details</label>
    <type>Text</type>
</CustomField>