unpackaged/main/default/objects/Contact/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <label>Email Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>