unpackaged/main/default/objects/Contact/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <label>Language Preference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>