unpackaged/main/default/objects/Contact/fields/Member_Card_Num__c.field-meta.xml
<CustomField>
    <fullName>Member_Card_Num__c</fullName>
    <externalId>true</externalId>
    <label>Membership Id</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>