unpackaged/main/default/objects/Contact/fields/Membership_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Membership_Authorization__c</fullName>
    <label>Membership Authorization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>