unpackaged/main/default/objects/Contact/fields/Membership_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Membership_Birthday__c</fullName>
    <label>Membership Birthday</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>