unpackaged/main/default/objects/Contact/fields/Membership_Code__c.field-meta.xml
<CustomField>
    <fullName>Membership_Code__c</fullName>
    <label>Membership_Code</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>