unpackaged/main/default/objects/Contact/fields/Membership_Id__c.field-meta.xml
<CustomField>
    <fullName>Membership_Id__c</fullName>
    <externalId>true</externalId>
    <label>Membership IdArchived</label>
    <length>16</length>
    <type>Text</type>
</CustomField>