unpackaged/main/default/objects/Contact/fields/Membership_IsLocalClub__c.field-meta.xml
<CustomField>
    <fullName>Membership_IsLocalClub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Club</label>
    <type>Checkbox</type>
</CustomField>