unpackaged/main/default/objects/Contact/fields/Membership_Org__c.field-meta.xml
<CustomField>
    <fullName>Membership_Org__c</fullName>
    <description>Old label &#39;Speciality Program Name&#39;</description>
    <label>Program Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>