unpackaged/main/default/objects/Contact/fields/Membership_Org_Phone__c.field-meta.xml
<CustomField>
    <fullName>Membership_Org_Phone__c</fullName>
    <label>Membership Org Phone</label>
    <type>Phone</type>
</CustomField>