unpackaged/main/default/objects/Contact/fields/Membership_OrgCode__c.field-meta.xml
<CustomField>
    <fullName>Membership_OrgCode__c</fullName>
    <description>Old Label : &#39;Specialty Program Description&#39;</description>
    <label>Program Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>