unpackaged/main/default/objects/Contact/fields/Membership_Program__c.field-meta.xml
<CustomField>
    <fullName>Membership_Program__c</fullName>
    <label>Membership Program</label>
    <length>25</length>
    <type>Text</type>
</CustomField>