unpackaged/main/default/objects/Contact/fields/Membership_Service_Charge_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Membership_Service_Charge_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Charge Indicator</label>
    <type>Checkbox</type>
</CustomField>