unpackaged/main/default/objects/Contact/fields/Membership_Since__c.field-meta.xml
<CustomField>
    <fullName>Membership_Since__c</fullName>
    <label>Membership Since</label>
    <length>4</length>
    <type>Text</type>
</CustomField>