unpackaged/main/default/objects/Contact/fields/Membership_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Membership_Sponsor__c</fullName>
    <label>Membership Sponsor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>