unpackaged/main/default/objects/Contact/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <label>Membership Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>