unpackaged/main/default/objects/Contact/fields/Mobile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code__c</fullName>
    <formula>&quot;+1&quot; + MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile (+Country Code)</label>
    <type>Text</type>
</CustomField>