unpackaged/main/default/objects/Contact/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>