unpackaged/main/default/objects/Contact/fields/Searchable_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Searchable_Phone_Number__c</fullName>
    <description>Phone number without special characters for searching</description>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, &#39;(&#39;, &#39;&#39;), &#39;)&#39;, &#39;&#39;), &#39;-&#39;, &#39;&#39;), &#39; &#39;, &#39;&#39;)</formula>
    <label>Searchable Phone Number</label>
    <type>Text</type>
</CustomField>