unpackaged/main/default/objects/Contact/fields/Sms_Optin__c.field-meta.xml
<CustomField>
    <fullName>Sms_Optin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>