unpackaged/main/default/objects/Contact/fields/ThirdParty_Driver_Location__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Driver_Location__c</fullName>
    <description>To Locate the Third party Driver Location</description>
    <label>ThirdParty Service Resource Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>