unpackaged/main/default/objects/Contact/fields/Tracker_BotContext_old__c.field-meta.xml
<CustomField>
    <fullName>Tracker_BotContext_old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracker BotContext</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Contacts (Tracker BotContext)</relationshipLabel>
    <relationshipName>TContacts_old</relationshipName>
    <type>Lookup</type>
</CustomField>