unpackaged/main/default/objects/Contact/recordTypes/Community_User.recordType-meta.xml
<RecordType>
    <fullName>Community_User</fullName>
    <active>true</active>
    <description>Used For Creating Community User</description>
    <label>Community User</label>
</RecordType>