unpackaged/main/default/objects/Contact/recordTypes/Member.recordType-meta.xml
<RecordType>
    <fullName>Member</fullName>
    <active>true</active>
    <description>Contact Member</description>
    <label>Member</label>
</RecordType>