unpackaged/main/default/objects/Contact/recordTypes/Third_Party_Driver.recordType-meta.xml
<RecordType>
    <fullName>Third_Party_Driver</fullName>
    <active>true</active>
    <label>Third Party Driver</label>
</RecordType>