unpackaged/main/default/objects/Contact/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>External_ID__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>y2902</value>
    </filters>
    <label>ALL</label>
</ListView>