unpackaged/main/default/objects/Contact/listViews/All_Contacts_Third_Party.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Third_Party</fullName>
    <columns>FULL_NAME</columns>
    <columns>External_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Type__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Third_Party_Driver</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Contacts - Third Party</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>