unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Type__c</columns>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Membership_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>Amy Far</value>
    </filters>
    <label>All Contacts</label>
</ListView>