unpackaged/main/default/objects/Contact/listViews/JL_Contacts_Without_Accounts.listView-meta.xml
<ListView>
    <fullName>JL_Contacts_Without_Accounts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ACCOUNT_ID</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Member</value>
    </filters>
    <label>JL - Contacts Without Accounts</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>