unpackaged/main/default/objects/Contact/listViews/Partner_Accounts.listView-meta.xml
<ListView>
    <fullName>Partner_Accounts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Type__c</columns>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Community_User</value>
    </filters>
    <label>Partner Accounts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Back_Office</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>