unpackaged/main/default/objects/Contact/listViews/Specific_Contact.listView-meta.xml
<ListView>
    <fullName>Specific_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Membership_Level__c</field>
        <operation>equals</operation>
        <value>Plus</value>
    </filters>
    <filters>
        <field>Membership_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Specific Contact</label>
</ListView>